--- a/QuanLyKhachSan/nbproject/private/private.properties
+++ b/QuanLyKhachSan/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\hp\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
