--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -35,9 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyKhachSan
 endorsed.classpath=
 excludes=
+file.reference.AnimatonClass.jar=D:\\Library\\Animation Class (Version 1,5)\\AnimatonClass.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AnimatonClass.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
