--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyKhachSan
 endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=D:\\Library\\Animation Class (Version 1,5)\\AnimatonClass.jar
+file.reference.AnimatonClass.jar-1=..\\lib\\Animation Class (Version 1,5)\\AnimatonClass.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.AnimatonClass.jar}
+    ${file.reference.AnimatonClass.jar}:\
+    ${file.reference.AnimatonClass.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
