--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=D:\\Library\\Animation Class (Version 1,5)\\AnimatonClass.jar
 file.reference.AnimatonClass.jar-1=..\\lib\\Animation Class (Version 1,5)\\AnimatonClass.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar=C:\\Users\\Minh Triet\\Desktop\\ThuVien\\mssql-jdbc-9.2.1.jre15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.AnimatonClass.jar-1}
+    ${file.reference.AnimatonClass.jar-1}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
