--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -37,6 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=D:\\Library\\Animation Class (Version 1,5)\\AnimatonClass.jar
 file.reference.AnimatonClass.jar-1=..\\lib\\Animation Class (Version 1,5)\\AnimatonClass.jar
+file.reference.mssql-jdbc-8.2.2.jre11.jar=D:\\JAVA 3\\sqljdbc_8.2.2.0_enu\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=C:\\Users\\Minh Triet\\Desktop\\ThuVien\\mssql-jdbc-9.2.1.jre15.jar
 includes=**
 jar.compress=false
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
     ${file.reference.AnimatonClass.jar-1}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar}
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
