--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -37,12 +37,16 @@ endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=D:\\Library\\Animation Class (Version 1,5)\\AnimatonClass.jar
 file.reference.AnimatonClass.jar-1=..\\lib\\Animation Class (Version 1,5)\\AnimatonClass.jar
+file.reference.jcalendar-1.4.jar=D:\\Library\\lib\\lib\\lib\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-9.2.1.jre11.jar=D:\\Library\\JDBC\\sqljdbc_9.2.1.0_enu\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.AnimatonClass.jar-1}
+    ${file.reference.AnimatonClass.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
