--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -172,7 +172,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=QuanLyKhachSan
-main.class=quanlykhachsan.QuanLyKhachSan
+main.class=com.exemple.views.DoiMatKhauJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
