--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/QuanLyKhachSan/nbproject/private/*
+/QuanLyKhachSan/nbproject/private/
 /QuanLyKhachSan/build/
 /QuanLyKhachSan/src/com/exemple/helper/JdbcHelper.java
