--- a/QuanLyKhachSan/nbproject/private/private.properties
+++ b/QuanLyKhachSan/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\hp\\OneDrive\\M\u00e1y t\u00ednh\\hehe\\duan1_quanlykhachsan\\lib\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
