--- a/QuanLyKhachSan/nbproject/project.properties
+++ b/QuanLyKhachSan/nbproject/project.properties
@@ -67,7 +67,9 @@ file.reference.jcalendar-1.4.jar=D:\\Library\\lib\\lib\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Minh Triet\\Desktop\\ThuVien\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=..\\lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=D:\\Library\\jar_files (1)\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=C:\\Downloads\\JFreeChart\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\Library\\jar_files (1)\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=C:\\Downloads\\JFreeChart\\jfreechart-1.0.19.jar
 file.reference.log4j-1.2.17.jar=..\\lib\\QR\\log4j-1.2.17.jar
 file.reference.log4j-api-2.14.1.jar=..\\lib\\pois\\poi\\log4j-api-2.14.1.jar
 file.reference.mssql-jdbc-9.2.1.jre11.jar=D:\\Library\\JDBC\\sqljdbc_9.2.1.0_enu\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre11.jar
@@ -130,7 +132,9 @@ javac.classpath=\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
     ${file.reference.slf4j-api-1.7.32.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-9.2.1.jre11.jar}
 =======
