update hoa don va order dich vu

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /QuanLyKhachSan/nbproject/private/
 /QuanLyKhachSan/build/
 /QuanLyKhachSan/src/com/exemple/helper/JdbcHelper.java
+/QuanLyKhachSan/dist/
